# 42

./: .gitignore  .pem  README.md  clear.sh  ft_lstiter.c  ft_lstmap.c  ft_strtrim.c
.ccls-cache/@@Users@wax@42/: @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@Availability.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@AvailabilityInternal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@AvailabilityVersions.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@_ctermid.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@_stdio.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@_types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@_types@_intmax_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@_types@_uint16_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@_types@_uint32_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@_types@_uint64_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@_types@_uint8_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@_types@_uintmax_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@alloca.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@c++@v1@__config.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@c++@v1@limits.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@c++@v1@stdint.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@c++@v1@stdio.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@c++@v1@stdlib.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@fcntl.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@gethostuuid.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@i386@_limits.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@i386@_mcontext.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@i386@_types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@i386@endian.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@i386@limits.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@i386@signal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@i386@types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@libkern@_OSByteOrder.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@libkern@i386@_OSByteOrder.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@limits.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@mach@i386@_structs.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@mach@machine@_structs.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@machine@_mcontext.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@machine@_types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@machine@endian.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@machine@limits.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@machine@signal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@machine@types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.0.sdk@usr@include@malloc@_malloc.h.blob  (+98 more)
Born2beRoot/: note
Fdf/: Makefile  a.out  fdf  tags
Get_Next_Line/: a.out  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c  tags
Gnl/: Makefile  get_next_line.h  get_next_line_utils.c
cube/: $  Makefile  cub3D  cube  makefile
cube3D/: $  _log1  `  cude  makefile  map.cub  testcat.c
ft_containers/: CMakeLists.txt  Makefile  t.cpp
ft_containers/includes/: algorithm.hpp  iterators_traits.hpp  map.hpp  map_iterator.hpp  map_rev_iterator.hpp  pair.hpp  rev_vector_iterator.hpp  stack.hpp  tools.hpp  type.hpp  value_comp.hpp  vector.hpp  vector_iterator.hpp
ft_containers/script/: timer42.sh
ft_containers/srcs/: main.cpp
ft_containers/test/: get_allocator.cpp  header.hpp  main42.cpp  map_begin.cpp  map_clear.cpp  map_count.cpp  map_empty.cpp  map_equal_range.cpp  map_find.cpp  map_get_allocator.cpp  map_insert.cpp  map_keycomp.cpp  map_lower_bound.cpp  map_operator.cpp  map_operator1.cpp  map_rbegin.cpp  map_rend.cpp  map_size.cpp  map_size_max.cpp  map_swap.cpp  map_value_comp.cpp  maptester.cpp  rev_iterator.cpp  stack_empty.cpp  stack_pop.cpp  stack_push.cpp  stack_size.cpp  stack_swap.cpp  stack_top.cpp  timer_main_42.cpp  vector_access.cpp  vector_assign.cpp  vector_back.cpp  vector_capacity.cpp  vector_clear.cpp  vector_empty.cpp  vector_enable_if.cpp  vector_equal.cpp  vector_erase.cpp  vector_insert.cpp  (+9 more)
ft_irc/: main.cpp
inception/: Makefile  help
libft/: .Makefile.swp  .libft.h.swp  .main.c.swp  Makefile  a.out  clear  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isacii.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstiter.c  ft_memalloc.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_menchr.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_striteri.c  ft_strjoin.C  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+9 more)
moduleCPP/learned/class/: CMakeLists.txt  main.cpp  rational.cpp  rational.hpp
philosopher/: Makefile  ft_parsing.c  test.c  tree
pipex/: .here_doc  Makefile  libft  tags  test  tree
printf/: Makefile  main.c
push_swap/: .Makefile.swp  Makefile  a.out  libft  list  pipex  push_swap  tag  tags  tree.txt
(+617 files in other folders)
